fixed layout bug with new bootsrap

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -23,7 +23,8 @@ div.input textarea {
 	}
 }
 
-.center-cell {
+div.center-cell {
+  float: none;
 	display:table-cell;
 	vertical-align:middle;
 }
